logs/LibHealpix_0.6.log
>>> 'Pkg.add("LibHealpix")' log
INFO: Cloning cache of FITSIO from https://github.com/JuliaAstro/FITSIO.jl.git
INFO: Cloning cache of LibHealpix from https://github.com/mweastwood/LibHealpix.jl.git
INFO: Installing BinDeps v0.6.0
INFO: Installing FITSIO v0.10.0
INFO: Installing LibHealpix v0.2.0
INFO: Installing MacroTools v0.3.7
INFO: Installing SHA v0.3.3
INFO: Installing StaticArrays v0.5.1
INFO: Installing URIParser v0.1.8
INFO: Building FITSIO
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/FITSIO/deps/downloads
INFO: Downloading file ftp://heasarc.gsfc.nasa.gov/software/fitsio/c/cfitsio3370.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  9 4627k    9  417k    0     0   331k      0  0:00:13  0:00:01  0:00:12  331k100 4627k  100 4627k    0     0  3113k      0  0:00:01  0:00:01 --:--:-- 3113k
INFO: Done downloading file ftp://heasarc.gsfc.nasa.gov/software/fitsio/c/cfitsio3370.tar.gz
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/FITSIO/deps/src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/FITSIO/deps
INFO: Directory /home/vagrant/.julia/v0.6/FITSIO/deps already created
INFO: Changing Directory to /home/vagrant/.julia/v0.6/FITSIO/deps/src/cfitsio
drvrfile.c: In function ‘file_truncate’:
drvrfile.c:464:14: warning: ignoring return value of ‘ftruncate’, declared with attribute warn_unused_result [-Wunused-result]
     ftruncate(fdesc, (OFF_T) filesize);
              ^
drvrmem.c: In function ‘mem_compress_open’:
drvrmem.c:596:14: warning: ignoring return value of ‘fread’, declared with attribute warn_unused_result [-Wunused-result]
         fread(buffer, 1, 4L, diskfile);   /* read 4 bytes */
              ^
drvrmem.c:641:14: warning: ignoring return value of ‘fread’, declared with attribute warn_unused_result [-Wunused-result]
         fread(buffer, 1, 4L, diskfile);   /* read 4 bytes */
              ^
drvrnet.c: In function ‘root_openfile’:
drvrnet.c:2485:10: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result]
     fgets(recbuf,MAXLEN,stdin);
          ^
drvrnet.c:2517:10: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result]
     fgets(recbuf,MAXLEN,stdin);
          ^
group.c: In function ‘fits_get_cwd’:
group.c:5476:9: warning: ignoring return value of ‘getcwd’, declared with attribute warn_unused_result [-Wunused-result]
   getcwd(buff,FLEN_FILENAME);
         ^
region.c: In function ‘fits_read_ascii_region’:
region.c:119:15: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result]
          fgets( currLine+lineLen, allocLen+1, rgnFile );
               ^
ar: creating libcfitsio.a
INFO: Building LibHealpix
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/LibHealpix/deps/downloads
INFO: Downloading file http://downloads.sourceforge.net/project/healpix/Healpix_3.30/Healpix_3.30_2015Oct08.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0   375    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
 11 22.3M   11 2704k    0     0  2707k      0  0:00:08 --:--:--  0:00:08 2707k100 22.3M  100 22.3M    0     0  16.1M      0  0:00:01  0:00:01 --:--:-- 51.5M
INFO: Done downloading file http://downloads.sourceforge.net/project/healpix/Healpix_3.30/Healpix_3.30_2015Oct08.tar.gz
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/LibHealpix/deps/src
INFO: Directory /home/vagrant/.julia/v0.6/LibHealpix/deps/src already created
INFO: Attempting to Create directory /home/vagrant/.julia/v0.6/LibHealpix/deps
INFO: Directory /home/vagrant/.julia/v0.6/LibHealpix/deps already created
INFO: Changing Directory to /home/vagrant/.julia/v0.6/LibHealpix/deps/src/Healpix_3.30/src/C/autotools
configure.ac:66: error: possibly undefined macro: AC_PROG_LIBTOOL
      If this token and others are legitimate, please use m4_pattern_allow.
      See the Autoconf documentation.
autoreconf: /usr/bin/autoconf failed with exit status: 1
=============================[ ERROR: LibHealpix ]==============================

LoadError: failed process: Process(`autoreconf --install`, ProcessExited(1)) [1]
while loading /home/vagrant/.julia/v0.6/LibHealpix/deps/build.jl, in expression starting on line 54

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: LibHealpix had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.6
 - build the package(s) and all dependencies with `Pkg.build("LibHealpix")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated

>>> 'Pkg.test("LibHealpix")' log
Julia Version 0.6.0
Commit 9036443 (2017-06-19 13:05 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-121-generic #170-Ubuntu SMP Wed Jun 14 09:04:33 UTC 2017 x86_64 x86_64
Memory: 2.9392738342285156 GB (357.9296875 MB free)
Uptime: 4786.0 sec
Load Avg:  0.974609375  1.8271484375  1.5732421875
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3501 MHz     267422 s         56 s      16398 s     128947 s          4 s
#2  3501 MHz      58112 s         96 s       7753 s     405904 s          0 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-8-openjdk-amd64
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.6
2 required packages:
 - JSON                          0.12.0
 - LibHealpix                    0.2.0
7 additional packages:
 - BinDeps                       0.6.0
 - Compat                        0.26.0
 - FITSIO                        0.10.0
 - MacroTools                    0.3.7
 - SHA                           0.3.3
 - StaticArrays                  0.5.1
 - URIParser                     0.1.8
INFO: Testing LibHealpix
ERROR: LoadError: LibHealpix is not properly installed. Please run Pkg.build("LibHealpix")
Stacktrace:
 [1] error(::String) at ./error.jl:21
 [2] include_from_node1(::String) at ./loading.jl:569
 [3] include(::String) at ./sysimg.jl:14
 [4] anonymous at ./<missing>:2
while loading /home/vagrant/.julia/v0.6/LibHealpix/src/LibHealpix.jl, in expression starting on line 53
ERROR: LoadError: Failed to precompile LibHealpix to /home/vagrant/.julia/lib/v0.6/LibHealpix.ji.
Stacktrace:
 [1] compilecache(::String) at ./loading.jl:703
 [2] _require(::Symbol) at ./loading.jl:490
 [3] require(::Symbol) at ./loading.jl:398
 [4] include_from_node1(::String) at ./loading.jl:569
 [5] include(::String) at ./sysimg.jl:14
 [6] process_options(::Base.JLOptions) at ./client.jl:305
 [7] _start() at ./client.jl:371
while loading /home/vagrant/.julia/v0.6/LibHealpix/test/runtests.jl, in expression starting on line 16
=============================[ ERROR: LibHealpix ]==============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.6/LibHealpix/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: LibHealpix had test errors

>>> End of log
